--- a/index.html
+++ b/index.html
@@ -12,33 +12,23 @@
 <body>
     <h3>Livello 1</h3>
     <button onclick="add_row('tab_1', 1)" class="tab_button"> + </button>
-    <button onclick="del_row('tab_1', 1)" class="tab_button"> - </button>
+    <!-- <button onclick="del_row('tab_1', 1)" class="tab_button"> - </button> -->
     <table id="tab_1">
         <tr>
-            <th class="lvl">Livello</th>
+            <th class="lvl">lvl</th>
             <th>Incantesimo</th>
             <th>n.</th>
-        </tr>
-        <tr>
-            <td class="lvl">1</td>
-            <td contenteditable='true'></td>
-            <td contenteditable='true'></td>
         </tr>
     </table>
 
     <h3>Livello 2</h3>
     <button onclick="add_row('tab_2', 2)"> + </button>
-    <button onclick="del_row('tab_2', 2)"> - </button>
+    <!-- <button onclick="del_row('tab_2', 2)"> - </button> -->
     <table id="tab_2">
         <tr>
-            <th class="lvl">Livello</th>
+            <th class="lvl">lvl</th>
             <th>Incantesimo</th>
             <th>n.</th>
-        </tr>
-        <tr>
-            <td class="lvl">2</td>
-            <td contenteditable='true'></td>
-            <td contenteditable='true'></td>
         </tr>
     </table>
 
