aggiunte tab fino a livello 5 index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
     <h3>Livello 1</h3>
     <button onclick="add_row('tab_1', 1)" class="tab_button"> + </button>
-    <!-- <button onclick="del_row('tab_1', 1)" class="tab_button"> - </button> -->
     <table id="tab_1">
         <tr>
             <th class="lvl">lvl</th>
@@ -23,8 +22,38 @@
 
     <h3>Livello 2</h3>
     <button onclick="add_row('tab_2', 2)"> + </button>
-    <!-- <button onclick="del_row('tab_2', 2)"> - </button> -->
     <table id="tab_2">
+        <tr>
+            <th class="lvl">lvl</th>
+            <th>Incantesimo</th>
+            <th>n.</th>
+        </tr>
+    </table>
+
+        <h3>Livello 3</h3>
+    <button onclick="add_row('tab_3', 3)"> + </button>
+    <table id="tab_3">
+        <tr>
+            <th class="lvl">lvl</th>
+            <th>Incantesimo</th>
+            <th>n.</th>
+        </tr>
+    
+    </table>
+        <h3>Livello 4</h3>
+    <button onclick="add_row('tab_4', 4)"> + </button>
+    <table id="tab_4">
+        <tr>
+            <th class="lvl">lvl</th>
+            <th>Incantesimo</th>
+            <th>n.</th>
+        </tr>
+    </table>
+
+        </table>
+        <h3>Livello 5</h3>
+    <button onclick="add_row('tab_5', 5)"> + </button>
+    <table id="tab_5">
         <tr>
             <th class="lvl">lvl</th>
             <th>Incantesimo</th>
