--- a/index.html
+++ b/index.html
@@ -10,56 +10,60 @@
 </head>
 
 <body>
-    <h3>Livello 1</h3>
-    <button onclick="add_row('tab_1', 1)" class="tab_button"> + </button>
-    <table id="tab_1">
-        <tr>
-            <th class="lvl">lvl</th>
-            <th>Incantesimo</th>
-            <th>n.</th>
-        </tr>
-    </table>
-
-    <h3>Livello 2</h3>
-    <button onclick="add_row('tab_2', 2)"> + </button>
-    <table id="tab_2">
-        <tr>
-            <th class="lvl">lvl</th>
-            <th>Incantesimo</th>
-            <th>n.</th>
-        </tr>
-    </table>
-
-        <h3>Livello 3</h3>
-    <button onclick="add_row('tab_3', 3)"> + </button>
-    <table id="tab_3">
-        <tr>
-            <th class="lvl">lvl</th>
-            <th>Incantesimo</th>
-            <th>n.</th>
-        </tr>
-    
-    </table>
-        <h3>Livello 4</h3>
-    <button onclick="add_row('tab_4', 4)"> + </button>
-    <table id="tab_4">
-        <tr>
-            <th class="lvl">lvl</th>
-            <th>Incantesimo</th>
-            <th>n.</th>
-        </tr>
-    </table>
-
+    <div class="tables">
+        <table id="tab_1">
+            <tr>
+                <th class="lvl">--</th>
+                <th>Livello 1</th>
+                <th class="add">0</th>
+            </tr>
         </table>
-        <h3>Livello 5</h3>
-    <button onclick="add_row('tab_5', 5)"> + </button>
-    <table id="tab_5">
-        <tr>
-            <th class="lvl">lvl</th>
-            <th>Incantesimo</th>
-            <th>n.</th>
-        </tr>
-    </table>
+        <button onclick="add_row('tab_1')" class="adder"> + </button>
+    </div>
+
+    <div class="tables">
+        <table id="tab_2">
+            <tr>
+                <th class="lvl">--</th>
+                <th>Livello 2</th>
+                <th class="add">0</th>
+            </tr>
+        </table>
+        <button onclick="add_row('tab_2')" class="adder"> + </button>
+    </div>
+
+    <div class="tables">
+        <table id="tab_3">
+            <tr>
+                <th class="lvl">--</th>
+                <th>Livello 3</th>
+                <th class="add">0</th>
+            </tr>
+        </table>
+        <button onclick="add_row('tab_3')" class="adder"> + </button>
+    </div>
+
+    <div class="tables">
+        <table id="tab_4">
+            <tr>
+                <th class="lvl">--</th>
+                <th>Livello 4</th>
+                <th class="add">0</th>
+            </tr>
+        </table>
+        <button onclick="add_row('tab_4')" class="adder"> + </button>
+    </div>
+
+    <div class="tables">
+        <table id="tab_5">
+            <tr>
+                <th class="lvl">--</th>
+                <th>Livello 5</th>
+                <th class="add">0</th>
+            </tr>
+        </table>
+        <button onclick="add_row('tab_5')" class="adder"> + </button>
+    </div>
 
 </body>
 
