--- a/index.html
+++ b/index.html
@@ -7,64 +7,13 @@
     <title>Scheda Incantesimi</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;0,700;1,400&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <div class="tables">
-        <table id="tab_1">
-            <tr>
-                <th class="lvl">--</th>
-                <th>Livello 1</th>
-                <th class="add">0</th>
-            </tr>
-        </table>
-        <button onclick="add_row('tab_1')" class="adder"> + </button>
-    </div>
-
-    <div class="tables">
-        <table id="tab_2">
-            <tr>
-                <th class="lvl">--</th>
-                <th>Livello 2</th>
-                <th class="add">0</th>
-            </tr>
-        </table>
-        <button onclick="add_row('tab_2')" class="adder"> + </button>
-    </div>
-
-    <div class="tables">
-        <table id="tab_3">
-            <tr>
-                <th class="lvl">--</th>
-                <th>Livello 3</th>
-                <th class="add">0</th>
-            </tr>
-        </table>
-        <button onclick="add_row('tab_3')" class="adder"> + </button>
-    </div>
-
-    <div class="tables">
-        <table id="tab_4">
-            <tr>
-                <th class="lvl">--</th>
-                <th>Livello 4</th>
-                <th class="add">0</th>
-            </tr>
-        </table>
-        <button onclick="add_row('tab_4')" class="adder"> + </button>
-    </div>
-
-    <div class="tables">
-        <table id="tab_5">
-            <tr>
-                <th class="lvl">--</th>
-                <th>Livello 5</th>
-                <th class="add">0</th>
-            </tr>
-        </table>
-        <button onclick="add_row('tab_5')" class="adder"> + </button>
-    </div>
-
 </body>
 
 </html>
