--- a/index.html
+++ b/index.html
@@ -17,3 +17,18 @@
 </body>
 
 </html>
+
+
+<!-- ESEMPIO TABELLA -->
+<!-- <body>
+    <div class="tables">
+        <table id="tab_1">
+            <tr>
+                <th class="lvl">--</th>
+                <th>Livello 1</th>
+                <th class="add">0</th>
+            </tr>
+        </table>
+        <button onclick="add_row('tab_1')" class="adder"> + </button>
+    </div>
+</body> -->
